Modificaciones al estilo del pagina

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,6 +24,7 @@ body {
   grid-template-columns: minmax(auto, 976px);
   display: grid;
   justify-content: center;
+  background-color: aqua;
 }
 
 .Characters {
